--- a/index11.html
+++ b/index11.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230711025923"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711025923"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711025923"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711025923"></script>
-  <script src="files/script /tilt.js?_v=20230711025923"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230711155840"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711155840"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711155840"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711155840"></script>
+  <script src="files/script /tilt.js?_v=20230711155840"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711025923" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711025923" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711155840" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711155840" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     
 </head>
@@ -28,6 +28,9 @@
 	<div class="notify ny_2">
 		<h2>fullscreen and restart</h2>
 	</div>
+		<div class="notify ny_3">
+			<h2>for better speed</h2>
+		</div>
 <div id="preloader">
 	<div class="progress-bar_box">
 		<div class="progresss-bar-main">
@@ -60,8 +63,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711025923" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711025923"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711155840" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711155840"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -290,8 +293,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711025923"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230711025923"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711155840"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230711155840"></script> -->
 
 
 
@@ -302,15 +305,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230711025923"></script>
-<script src="files/script /locomotive.js?_v=20230711025923"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230711025923"></script>
+<script src="files/script /swup.js?_v=20230711155840"></script>
+<script src="files/script /locomotive.js?_v=20230711155840"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230711155840"></script>
 
-<script src="files/script /script.js?_v=20230711025923"></script>
+<script src="files/script /script.js?_v=20230711155840"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711025923"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711155840"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
