--- a/index7.html
+++ b/index7.html
@@ -4,22 +4,33 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230711171620"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711171620"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711171620"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711171620"></script>
-  <script src="files/script /tilt.js?_v=20230711171620"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230711174047"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711174047"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711174047"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711174047"></script>
+  <script src="files/script /tilt.js?_v=20230711174047"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711171620" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711171620" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711174047" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711174047" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="apple-touch-icon" sizes="180x180" href="files/favicon/apple-touch-icon.png">
+   
+    <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
+    <link rel="apple-touch-icon" sizes="60x60" href="files/favicon/apple-icon-60x60.png">
+    <link rel="apple-touch-icon" sizes="72x72" href="files/favicon/apple-icon-72x72.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="files/favicon/apple-icon-76x76.png">
+    <link rel="apple-touch-icon" sizes="114x114" href="files/favicon/apple-icon-114x114.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="files/favicon/apple-icon-120x120.png">
+    <link rel="apple-touch-icon" sizes="144x144" href="files/favicon/apple-icon-144x144.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="files/favicon/apple-icon-152x152.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="files/favicon/apple-icon-180x180.png">
+    <link rel="icon" type="image/png" sizes="192x192" href="files/favicon/android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="files/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="files/favicon/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="files/favicon/favicon-16x16.png">
-    <link rel="manifest" href="files/favicon/site.webmanifest">
-    <link rel="mask-icon" href="files/favicon/safari-pinned-tab.svg" color="#000000">
-    <meta name="msapplication-TileColor" content="#da532c">
+    <link rel="manifest" href="files/favicon/manifest.json">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-TileImage" content="files/favicon/ms-icon-144x144.png">
     <meta name="theme-color" content="#ffffff">
 </head>
 <header>
@@ -69,8 +80,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711171620" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711171620"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711174047" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711174047"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -283,8 +294,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711171620"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230711171620"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711174047"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230711174047"></script> -->
 
 
 
@@ -295,15 +306,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230711171620"></script>
-<script src="files/script /locomotive.js?_v=20230711171620"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230711171620"></script>
+<script src="files/script /swup.js?_v=20230711174047"></script>
+<script src="files/script /locomotive.js?_v=20230711174047"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230711174047"></script>
 
-<script src="files/script /script.js?_v=20230711171620"></script>
+<script src="files/script /script.js?_v=20230711174047"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711171620"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711174047"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
