--- a/index7.html
+++ b/index7.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="css/style.min.css?_v=20230711174047"></link>
-  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711174047"></script>
-  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711174047"></script>
-  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711174047"></script>
-  <script src="files/script /tilt.js?_v=20230711174047"></script>
+  <link rel="stylesheet" href="css/style.min.css?_v=20230711174946"></link>
+  <script src="https://code.createjs.com/1.0.0/preloadjs.min.js?_v=20230711174946"></script>
+  <script src="https://code.jquery.com/jquery-2.2.3.min.js?_v=20230711174946"></script>
+  <script src="https://unpkg.com/@swup/preload-plugin@2?_v=20230711174946"></script>
+  <script src="files/script /tilt.js?_v=20230711174946"></script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711174047" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711174047" rel="stylesheet"
+<link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300&family=Open+Sans:wght@300;400;500;600;700&display=swap&_v=20230711174946" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css?_v=20230711174946" rel="stylesheet"
     integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
    
     <link rel="apple-touch-icon" sizes="57x57" href="files/favicon/apple-icon-57x57.png">
@@ -80,8 +80,8 @@
 </div>
 
 </header>
-<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711174047" />
-<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711174047"></script> -->
+<!-- <link rel="stylesheet" href="https://cdn.plyr.io/3.7.7/plyr.css?_v=20230711174946" />
+<script src="https://cdn.plyr.io/3.7.7/plyr.polyfilled.js?_v=20230711174946"></script> -->
 
 <body>
   <main id="swup" class="transition-fade">
@@ -241,7 +241,9 @@
               <div class="row justify-content-center w-2">
                 <div class="col-10 position-relative">
                   <h3 class="text-center">Next Project</h3>
-                  <picture><source srcset="img/senator_main.webp" type="image/webp"><img class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
+                  <a href="index8.html">
+                    <picture><source srcset="img/senator_main.webp" type="image/webp"><img id="img_main_6" class="mobile_pic" src="img/senator_main.jpg" alt=""></picture>
+                  </a>
                   <div class="row row_info_main">
                     <div class="col-6">
                       <h2>SENATOR</h2>
@@ -294,8 +296,8 @@
 
 
 
-<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711174047"></script>
-  <script src="https://cdn.blobity.dev/by.js?_v=20230711174047"></script> -->
+<!-- <script src="https://cdn.blobity.dev/by.js?autoStart&licenseKey=...&_v=20230711174946"></script>
+  <script src="https://cdn.blobity.dev/by.js?_v=20230711174946"></script> -->
 
 
 
@@ -306,15 +308,15 @@
 
 
 
-<script src="files/script /swup.js?_v=20230711174047"></script>
-<script src="files/script /locomotive.js?_v=20230711174047"></script>
-<script src="files/script /SwupProgressPlugin.min.js?_v=20230711174047"></script>
+<script src="files/script /swup.js?_v=20230711174946"></script>
+<script src="files/script /locomotive.js?_v=20230711174946"></script>
+<script src="files/script /SwupProgressPlugin.min.js?_v=20230711174946"></script>
 
-<script src="files/script /script.js?_v=20230711174047"></script>
+<script src="files/script /script.js?_v=20230711174946"></script>
 
 
 <footer>
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711174047"
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js?_v=20230711174946"
                 integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
                 crossorigin="anonymous"></script>
 
